<resources>
    <string name="app_name">ProjekatDva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Character</string>
    <string name="actor">Actor</string>
    <string name="ancestry">Ancestry</string>
    <string name="save_to_data">Save to data</string>
    <string name="choose_a_house">Choose a house</string>
    <string name="gryffindor">Gryffindor</string>
    <string name="slytherin">Slytherin</string>
    <string name="hufflepuff">Hufflepuff</string>
    <string name="ravenclaw">Ravenclaw</string>
    <string name="gallery">Gallery</string>
    <string name="galleryI">Gallery</string>
    <string name="send_as_message">Send as message</string>
    <string name="my_database">My database</string>
</resources>