<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/houseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gryffindor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gryffindor"
        android:backgroundTint="@color/red"
        android:textSize="20sp"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/houseText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/gryffindor" />

    <Button
        android:id="@+id/slytherin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slytherin"
        android:textSize="20sp"
        android:padding="40dp"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/textViewII"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/gryffindor" />

    <Button
        android:id="@+id/hufflepuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:padding="40dp"
        android:text="@string/hufflepuff"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/slytherin" />
    <TextView
        android:id="@+id/textViewIII"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/hufflepuff" />

    <Button
        android:id="@+id/ravenclaw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:padding="40dp"
        android:text="@string/ravenclaw"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewIII" />
</androidx.constraintlayout.widget.ConstraintLayout>